--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
   </dependencies>
 
   <build>
+    <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
